# AI-DevPulse

./: .gitignore  README.md  detail.md
aidevpulse/backend/: .env.example  check_feeds.py  pyproject.toml
aidevpulse/backend/alembic/: env.py
aidevpulse/backend/alembic/versions/: 0001_initial_schema.py
aidevpulse/backend/app/: main.py
aidevpulse/backend/app/connectors/: base.py  hackernews.py  http_base.py  huggingface_rss.py  openai_rss.py  rss_base.py
aidevpulse/backend/app/core/: config.py  constants.py  exceptions.py  logging.py
aidevpulse/backend/app/db/: model_registry.py  session.py
aidevpulse/backend/app/models/: article.py  cluster.py  daily_brief.py  topic.py  trend.py
aidevpulse/backend/app/prompts/: summarize.md  why_it_matters.md
aidevpulse/backend/app/repositories/: article_repo.py  base.py  cluster_repo.py  daily_brief_repo.py  topic_repo.py  trend_repo.py
aidevpulse/backend/app/schemas/: analysis.py  cluster.py  daily_brief.py  dashboard.py  story.py  trend.py
aidevpulse/backend/app/services/: action_service.py  ai_provider.py  analysis_service.py  clustering_service.py  daily_brief_service.py  dashboard_service.py  embedding_service.py  ingestion_service.py  normalization_service.py  ranking_service.py  story_service.py  trend_service.py
aidevpulse/backend/app/tasks/: clustering_tasks.py  embedding_tasks.py  ingestion_tasks.py
aidevpulse/backend/scripts/: run_pipeline.py  seed_dev_data.py
aidevpulse/backend/tests/: conftest.py  factories.py
aidevpulse/backend/tests/integration/: test_analysis_live.py  test_api_routes.py
(+112 files in other folders)
