[project]
name = "aidevpulse-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<1.14",
    "asyncpg>=0.29",
    "pgvector>=0.3.6",
    "redis>=5.0",
    "celery>=5.4,<5.5",
    "apscheduler>=3.10,<3.11",
    "openai>=1.40",
    "anthropic>=0.34",
    "instructor>=1.5",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    "langdetect>=1.0.9",
    "tenacity>=9.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "discord.py>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "factory-boy>=3.3",
    "faker>=28.0",
    "respx>=0.21",
    "ruff>=0.6",
    "black>=24.8",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: hits a real local DB",
    "live: hits a real external API, run manually only",
]
